--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -4,4 +4,10 @@
 
 <h2>McDermott Network</h2>
 
+{% if not user.is_authenticated %}
+  <a href="/login">Login</a>
+{% else %}
+  <a href="/logout">Logout</a>
+{% endif %}
+
 {% endblock %}
