Created edit_info.html page where user will be able to edit his info

--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -8,6 +8,7 @@
   <a href="/login">Login</a>
 {% else %}
   <a href="/logout">Logout</a>
+  <a href="/edit_info.html">Edit Profile</a>
 {% endif %}
 
 {% endblock %}
