--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -8,7 +8,7 @@
   <a href="/login">Login</a>
 {% else %}
   <a href="/logout">Logout</a>
-  <a href="/edit_info.html">Edit Profile</a>
+  <a href="{% url 'edit_info' %}">Edit Profile</a>
 {% endif %}
 
 {% endblock %}
