--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -1,7 +1,9 @@
+{% load staticfiles %}
 <!DOCTYPE html>
 <html>
   <head>
     <title>McDermott Network</title>
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
   </head>
   <body>
     {% block content %}{% endblock content %}
