--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -6,12 +6,18 @@
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
   </head>
   <body>
+    <h2>McDermott Network</h2>
     {% block content %}{% endblock content %}
     {% if not user.is_authenticated %}
       <a href="/login">Login</a>
     {% else %}
       <a href="/logout">Logout</a>
+      <br>
       <a href="{% url 'edit_info' %}">Edit Profile</a>
+      <br>
+      <a href="{% url 'own_profile' %}">My Profile</a>
+      <br>
+      <a href="{% url 'scholars' %}">All Scholars</a>
     {% endif %}
   </body>
 </html>
