let users upload profile pics

--- a/core/templates/core/profile.html
+++ b/core/templates/core/profile.html
@@ -4,6 +4,10 @@
 
 <h2>{{ profile.user.get_full_name }}</h2>
 
+{% if profile.pic %}
+  <img src="{{ profile.pic.url }}" height=250>
+{% endif %}
+
 <p>Class: {{ profile.class_year }}</p>
 <p>Major: {{ profile.major }}</p>
 <p>Major2: {{ profile.major2 }}</p>
@@ -12,6 +16,5 @@
 <p>Hometown: {{ profile.hometown }}</p>
 <p>High School: {{ profile.high_school }}</p>
 <p>Phone number: {{ profile.phone_number }}</p>
-
 
 {% endblock %}
