--- a/core/templates/core/edit_info.html
+++ b/core/templates/core/edit_info.html
@@ -11,7 +11,7 @@
         {% endfor %}
     {% endfor %}
 {% endif %}
-<form method="post" action="{% url 'edit_info' %}">
+<form enctype="multipart/form-data" method="post" action="{% url 'edit_info' %}">
 {% csrf_token %}
 <table>
 {% for hidden in form.hidden_fields %}
