--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -1,4 +1,5 @@
 {% load staticfiles %}
+
 <!DOCTYPE html>
 <html>
   <head>
@@ -6,33 +7,69 @@
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
 
     <!-- MDL links -->
-    <link rel="stylesheet" href="https://storage.googleapis.com/code.getmdl.io/1.0.0/material.indigo-pink.min.css">
+    <link rel="stylesheet" href="https://storage.googleapis.com/code.getmdl.io/1.0.0/material.lime-deep_orange.min.css">
     <script src="https://storage.googleapis.com/code.getmdl.io/1.0.0/material.min.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
-    <!--Boostrap links -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <!-- jQuery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+
   </head>
   <body>
-    <h2>McDermott Network</h2>
-    {% block content %}{% endblock content %}
-    {% if not user.is_authenticated %}
-      <a href="{% url 'login' %}">Login</a>
-    {% else %}
-      <a href="{% url 'logout' %}">Logout</a>
-      <br>
-      <a href="{% url 'edit_info' %}">Edit Profile</a>
-      <br>
-      <a href="{% url 'own_profile' %}">My Profile</a>
-      <br>
-      <a href="{% url 'scholars' %}">All Scholars</a>
-      <br>
-      <form method="get" action="{% url 'search' %}">
-        <input type="text" name="q">
-        <input type="submit" value="Search">
-      </form>
-    {% endif %}
+    <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
+      <header class="mdl-layout__header">
+        <div class="mdl-layout__header-row">
+          <!-- Title -->
+          <span class="mdl-layout-title">McDermott Network</span>
+          <!-- Add spacer, to align navigation to the right -->
+          <div class="mdl-layout-spacer"></div>
+            <div class="mdl-textfield mdl-js-textfield mdl-textfield--expandable
+                        mdl-textfield--floating-label mdl-textfield--align-right">
+              <label class="mdl-button mdl-js-button mdl-button--icon"
+                     for="searchbox">
+                <i class="material-icons">search</i>
+              </label>
+              <div class="mdl-textfield__expandable-holder">
+                <form id="searchbox_submit" method="get" action="{% url 'search' %}">
+                <input class="mdl-textfield__input" type="text" name="q"
+                       id="searchbox" />
+                </form>
+              </div>
+            </div>
+          <!-- Navigation. We hide it in small screens. -->
+          <nav class="mdl-navigation mdl-layout--large-screen-only">
+            {% if not user.is_authenticated %}
+              <a class="mdl-navigation__link" href="{% url 'login' %}">Login</a>
+            {% else %}
+              <a class="mdl-navigation__link" href="{% url 'scholars' %}">All Scholars</a>
+              <a class="mdl-navigation__link" href="{% url 'own_profile' %}">My Profile</a>
+              <a class="mdl-navigation__link" href="{% url 'edit_info' %}">Edit Profile</a>
+              <a class="mdl-navigation__link" href="{% url 'logout' %}">Logout</a>
+            {% endif %}
+          </nav>
+        </div>
+      </header>
+      <div class="mdl-layout__drawer">
+        <span class="mdl-layout-title">McDermott Network</span>
+        <nav class="mdl-navigation">
+          {% if not user.is_authenticated %}
+            <a class="mdl-navigation__link" href="{% url 'login' %}">Login</a>
+          {% else %}
+            <a class="mdl-navigation__link" href="{% url 'scholars' %}">All Scholars</a>
+            <a class="mdl-navigation__link" href="{% url 'own_profile' %}">My Profile</a>
+            <a class="mdl-navigation__link" href="{% url 'edit_info' %}">Edit Profile</a>
+            <a class="mdl-navigation__link" href="{% url 'logout' %}">Logout</a>
+          {% endif %}
+        </nav>
+      </div>
+      <main class="mdl-layout__content">
+        <div class="page-content">
+          {% block content %}
+          {% endblock content %}
+        </div>
+      </main>
+    </div>
+
   </body>
 </html>
+
