--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -3,8 +3,9 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet" type="text/css">
     <title>McDermott Network</title>
-    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
 
     <!-- MDL links -->
     <link rel="stylesheet" href="https://storage.googleapis.com/code.getmdl.io/1.0.0/material.lime-deep_orange.min.css">
