add large container type page (use in edit_info and profile)

--- a/core/templates/core/edit_info.html
+++ b/core/templates/core/edit_info.html
@@ -1,6 +1,6 @@
-{% extends "base.html" %}
+{% extends "large_container.html" %}
 
-{% block content %}
+{% block inner_content %}
 
 {% if form.errors %}
   There were errors!
