--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -31,7 +31,7 @@
                 <i class="material-icons">search</i>
               </label>
               <div class="mdl-textfield__expandable-holder">
-                <form id="searchbox_submit" method="get" action="{% url 'search' %}">
+                <form method="get" action="{% url 'search' %}">
                 <input class="mdl-textfield__input" type="text" name="q"
                        id="searchbox" />
                 </form>
