--- a/core/templates/core/profile.html
+++ b/core/templates/core/profile.html
@@ -4,7 +4,7 @@
 
 {% block inner_content %}
 
-<h3>{{ profile.user.get_full_name }}</h3>
+<h3>{{ profile.get_full_name }}</h3>
 
 {% thumbnail profile.pic "200x200" crop="center" as im %}
   <img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}">
