--- a/core/templates/core/scholars.html
+++ b/core/templates/core/scholars.html
@@ -6,8 +6,8 @@
 
 {% for scholar in scholars %}
   {# add picture here #}
-  <a href ="/{{ scholar.first_name }}{{ scholar.last_name }}">
-    {{ scholar.get_full_name }}
+  <a href ="/{{ scholar.mcuser.first_name }}{{ scholar.mcuser.last_name }}">
+    {{ scholar.mcuser.get_full_name }}
   </a>
   <br>
 {% endfor %}
