--- a/core/templates/core/search.html
+++ b/core/templates/core/search.html
@@ -6,8 +6,8 @@
 
 {% for scholar in scholars %}
   {# add picture here #}
-  <a href ="/{{ scholar.user.first_name }}{{ scholar.user.last_name }}">
-    {{ scholar.user.get_full_name }}
+  <a href ="/{{ scholar.first_name }}{{ scholar.last_name }}">
+    {{ scholar.get_full_name }}
   </a>
   <br>
 {% empty %}
