--- a/core/templates/core/edit_info.html
+++ b/core/templates/core/edit_info.html
@@ -80,7 +80,7 @@
     <td>{{ form.phone_number.errors }}</td>
   </tr>
   <tr>
-    <td class="mdl-data-table__cell--non-numeric"ad>{{ form.pic.label_tag }}</td>
+    <td class="mdl-data-table__cell--non-numeric">{{ form.pic.label_tag }}</td>
     <td>{{ form.pic }}</td>
     <td>{{ form.pic.errors }}</td>
   </tr>
