--- a/core/templates/core/scholars.html
+++ b/core/templates/core/scholars.html
@@ -1,15 +1,36 @@
 {% extends "base.html" %}
 
+{% load staticfiles %}
+{% load thumbnail %}
+
 {% block content %}
 
-<p>All scholars:</p>
-
+<div class="mdl-grid">
 {% for scholar in scholars %}
   {# add picture here #}
-  <a href ="/{{ scholar.mcuser.first_name }}{{ scholar.mcuser.last_name }}">
-    {{ scholar.mcuser.get_full_name }}
-  </a>
-  <br>
+  <div class="mdl-card mdl-shadow--2dp mdl-cell mdl-cell--3-col">
+    <div class="mdl-card__title">
+       <h2 class="mdl-card__title-text">
+          <a class="no-dec" href ="/{{ scholar.first_name }}{{ scholar.last_name }}">
+            {{ scholar.get_full_name }}
+          </a>
+        </h2>
+    </div>
+    <div class="mdl-card__media">
+      {% if scholar.pic %}
+        {% thumbnail scholar.pic "100x100" crop="center" as im %}
+          <img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}">
+        {% endthumbnail %}
+      {% else %}
+        <img src="{% static 'img/user.png' %}" height="100" width="100">
+      {% endif %}
+    </div>
+    <div class="mdl-card__supporting-text">
+    Class: {{ scholar.class_year }}
+    </div>
+  </div>
+{% empty %}
+  <h3>No scholars found.</h3>
 {% endfor %}
-<br>
+</div>
 {% endblock %}
