Fix select fields to be in MDL style

--- a/core/templates/core/edit_info.html
+++ b/core/templates/core/edit_info.html
@@ -50,32 +50,43 @@
   </div>
   <!--TODO: Replace with Select vesion when MDL has it -->
   <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-    {{ form.gender.label_tag }}
-    {{ form.gender }}
+    {{ form.major|add_class:"mdl-textfield__input" }}
+    <label for="id_major" class="mdl-textfield__label">
+      Major
+    </label>
+    <span class="mdl-textfield__error">{{ form.major.errors }}</span>
+  </div>
+  <!--TODO: Replace with Select vesion when MDL has it -->
+  <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+    {{ form.major2|add_class:"mdl-textfield__input" }}
+    <label for="id_major2" class="mdl-textfield__label">
+      Major 2
+    </label>
+    <span class="mdl-textfield__error">{{ form.major2.errors }}</span>
+  </div>
+  <!--TODO: Replace with Select vesion when MDL has it -->
+  <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+    {{ form.minor|add_class:"mdl-textfield__input" }}
+    <label for="id_minor" class="mdl-textfield__label">
+      Minor
+    </label>
+    <span class="mdl-textfield__error">{{ form.minor.errors }}</span>
+  </div>
+  <!--TODO: Replace with Select vesion when MDL has it -->
+  <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+    {{ form.minor2|add_class:"mdl-textfield__input" }}
+    <label for="id_minor2" class="mdl-textfield__label">
+      Minor 2
+    </label>
+    <span class="mdl-textfield__error">{{ form.minor2.errors }}</span>
+  </div>
+  <!--TODO: Replace with Select vesion when MDL has it -->
+  <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+    {{ form.gender|add_class:"mdl-textfield__input" }}
+    <label for="id_gender" class="mdl-textfield__label">
+      Gender
+    </label>
     <span class="mdl-textfield__error">{{ form.gender.errors }}</span>
-  </div>
-  <!--TODO: Replace with Select vesion when MDL has it -->
-  <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-    {{ form.major.label_tag }}
-    {{ form.major }}
-    <span class="mdl-textfield__error">{{ form.major.errors }}</span>
-  </div>
-  <!--TODO: Replace with Select vesion when MDL has it -->
-  <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-    {{ form.major2.label_tag }}
-    {{ form.major2 }}
-    <span class="mdl-textfield__error">{{ form.major2.errors }}</span>
-  </div>
-  <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-    {{ form.minor.label_tag }}
-    {{ form.minor }}
-    <span class="mdl-textfield__error">{{ form.major.errors }}</span>
-  </div>
-  <!--TODO: Replace with Select vesion when MDL has it -->
-  <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-    {{ form.minor2.label_tag }}
-    {{ form.minor2 }}
-    <span class="mdl-textfield__error">{{ form.major2.errors }}</span>
   </div>
   <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
     {{ form.hometown|add_class:"mdl-textfield__input" }}
