--- a/core/static/css/styles.css
+++ b/core/static/css/styles.css
@@ -20,7 +20,7 @@
 .lg-con-content {
   border-radius: 2px;
   padding: 80px 56px;
-  margin-bottom: 80px;
+  /*margin-bottom: 80px;*/
 }
 
 .lg-con-layout.is-small-screen .lg-con-content {
@@ -33,4 +33,8 @@
 
 a.no-dec {
   text-decoration: none;
+}
+
+.text-center {
+  text-align: center;
 }
