--- a/login/templates/login/login.html
+++ b/login/templates/login/login.html
@@ -1,38 +1,50 @@
 {% extends "base.html" %}
 
+{% load widget_tweaks %}
+
 {% block content %}
 
-{% if form.errors %}
-<p>Your username and password didn't match. Please try again.</p>
-{% endif %}
-
-{% if next %}
-  {% if user.is_authenticated %}
-  <p>Your account doesn't have access to this page. To proceed,
-  please login with an account that has access.</p>
-  {% else %}
-  <p>Please login to see this page.</p>
+<br>
+<br>
+<div class="mdl-card mdl-shadow--3dp text-center center">
+  {% if next %}
+    <div class="mdl-card__supporting-text">
+      {% if user.is_authenticated %}
+      <p>Your account doesn't have access to this page. To proceed,
+      please login with an account that has access.</p>
+      {% else %}
+      <p>Please login to see this page.</p>
+    {% endif %}
+    </div>
   {% endif %}
-{% endif %}
+  <div class="mdl-card__supporting-text">
+    <br>
+    {% if form.errors %}
+      <p>Your username and password didn't match. Please try again.</p>
+    {% endif %}
+    <form method="post" action="{% url 'django.contrib.auth.views.login' %}">
+    {% csrf_token %}
+    <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+      {{ form.username|add_class:"mdl-textfield__input" }}
+      <label for="id_username" class="mdl-textfield__label">
+        Username
+      </label>
+    </div>
+    <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+      <td>{{ form.password|add_class:"mdl-textfield__input" }}</td>
+      <label for="id_username" class="mdl-textfield__label">
+        Password
+      </label>
+    </div>
 
-<form method="post" action="{% url 'django.contrib.auth.views.login' %}">
-{% csrf_token %}
-<table>
-<tr>
-  <td>{{ form.username.label_tag }}</td>
-  <td>{{ form.username }}</td>
-</tr>
-<tr>
-  <td>{{ form.password.label_tag }}</td>
-  <td>{{ form.password }}</td>
-</tr>
-</table>
+    <input class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent mdl-js-ripple-effect" type="submit" value="login" />
+    <input type="hidden" name="next" value="{{ next }}" />
+    </form>
+    <br>
+    <p><a href="{% url 'password_reset' %}">Lost password?</a></p>
+  </div>
+</div>
 
-<input type="submit" value="login" />
-<input type="hidden" name="next" value="{{ next }}" />
-</form>
 
-{# Assumes you setup the password_reset view in your URLconf #}
-<p><a href="{% url 'password_reset' %}">Lost password?</a></p>
 
 {% endblock %}
