Add Degree model

--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -21,7 +21,11 @@
       <header class="mdl-layout__header">
         <div class="mdl-layout__header-row">
           <!-- Title -->
-          <span class="mdl-layout-title">McDermott Network</span>
+          <span class="mdl-layout-title">
+            <a href="{% url 'index' %}" class="no-dec inherit-color">
+              McDermott Network
+            </a>
+          </span>
           <!-- Add spacer, to align navigation to the right -->
           <div class="mdl-layout-spacer"></div>
             <div class="mdl-textfield mdl-js-textfield mdl-textfield--expandable
