--- a/core/templates/core/edit_info.html
+++ b/core/templates/core/edit_info.html
@@ -23,101 +23,102 @@
     <!-- Manual HTML for McUser form -->
     <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
       {{ form.first_name|add_class:"mdl-textfield__input" }}
-      <label for="id_first_name" class="mdl-textfield__label">
+      <label for="id_{{ form.first_name.name }}" class="mdl-textfield__label">
         First name
       </label>
       <span class="mdl-textfield__error">{{ form.first_name.errors }}</span>
     </div>
     <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
       {{ form.last_name|add_class:"mdl-textfield__input" }}
-      <label for="id_last_name" class="mdl-textfield__label">
+      <label for="id_{{ form.last_name.name }}" class="mdl-textfield__label">
         Last name
       </label>
       <span class="mdl-textfield__error">{{ form.last_name.errors }}</span>
     </div>
     <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
       {{ form.class_year|add_class:"mdl-textfield__input" }}
-      <label for="id_class_year" class="mdl-textfield__label">
+      <label for="id_{{ form.class_year.name }}" class="mdl-textfield__label">
         Class year
       </label>
       <span class="mdl-textfield__error">{{ form.class_year.errors }}</span>
     </div>
     <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
       {{ form.utd_id|add_class:"mdl-textfield__input" }}
-      <label for="id_utd_id" class="mdl-textfield__label">
+      <label for="id_{{ form.utd_id.name }}" class="mdl-textfield__label">
         UTD ID
       </label>
       <span class="mdl-textfield__error">{{ form.utd_id.errors }}</span>
     </div>
-    <!--TODO: Replace with Select vesion when MDL has it -->
-    <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-      {{ form.major|add_class:"mdl-textfield__input" }}
-      <label for="id_major" class="mdl-textfield__label">
-        Major
-      </label>
-      <span class="mdl-textfield__error">{{ form.major.errors }}</span>
-    </div>
-    <!--TODO: Replace with Select vesion when MDL has it -->
-    <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-      {{ form.major2|add_class:"mdl-textfield__input" }}
-      <label for="id_major2" class="mdl-textfield__label">
-        Major 2
-      </label>
-      <span class="mdl-textfield__error">{{ form.major2.errors }}</span>
-    </div>
-    <!--TODO: Replace with Select vesion when MDL has it -->
-    <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-      {{ form.minor|add_class:"mdl-textfield__input" }}
-      <label for="id_minor" class="mdl-textfield__label">
-        Minor
-      </label>
-      <span class="mdl-textfield__error">{{ form.minor.errors }}</span>
-    </div>
-    <!--TODO: Replace with Select vesion when MDL has it -->
-    <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-      {{ form.minor2|add_class:"mdl-textfield__input" }}
-      <label for="id_minor2" class="mdl-textfield__label">
-        Minor 2
-      </label>
-      <span class="mdl-textfield__error">{{ form.minor2.errors }}</span>
-    </div>
+
     <!--TODO: Replace with Select vesion when MDL has it -->
     <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
       {{ form.gender|add_class:"mdl-textfield__input" }}
-      <label for="id_gender" class="mdl-textfield__label">
+      <label for="id_{{ form.gender.name }}" class="mdl-textfield__label">
         Gender
       </label>
       <span class="mdl-textfield__error">{{ form.gender.errors }}</span>
     </div>
     <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
       {{ form.hometown|add_class:"mdl-textfield__input" }}
-      <label for="id_hometown" class="mdl-textfield__label">
+      <label for="id_{{ form.hometown.name }}" class="mdl-textfield__label">
         Hometown
       </label>
       <span class="mdl-textfield__error">{{ form.hometown.errors }}</span>
     </div>
     <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
       {{ form.high_school|add_class:"mdl-textfield__input" }}
-      <label for="id_high_school" class="mdl-textfield__label">
+      <label for="id_{{ form.high_school.name }}" class="mdl-textfield__label">
         High School
       </label>
       <span class="mdl-textfield__error">{{ form.high_school.errors }}</span>
     </div>
     <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
       {{ form.phone_number|add_class:"mdl-textfield__input" }}
-      <label for="id_phone_number" class="mdl-textfield__label">
+      <label for="id_{{ form.phone_number.name }}" class="mdl-textfield__label">
         Phone Number
       </label>
       <span class="mdl-textfield__error">{{ form.phone_number.errors }}</span>
     </div>
+    <br>
     <!--TODO: Replace this with something else later -->
     <div>
       {{ form.pic }}
       <span class="mdl-textfield__error">{{ form.pic.errors }}</span>
     </div>
-  {{ form.user }}
-  <br>
-  <input class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent mdl-js-ripple-effect" type="submit" />
+    <br>
+    <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+      {{ degree_form.school|add_class:"mdl-textfield__input" }}
+      <label for="id_school" class="mdl-textfield__label">
+        School
+      </label>
+      <span class="mdl-textfield__error">{{ degree_form.school.errors }}</span>
+    </div>
+    <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+      {{ degree_form.degree_type|add_class:"mdl-textfield__input" }}
+      <label for="id_degree_type" class="mdl-textfield__label">
+        Degree
+      </label>
+      <span class="mdl-textfield__error">{{ degree_form.degree_type.errors }}</span>
+    </div>
+    <!--TODO: Replace with Select vesion when MDL has it -->
+    <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+      {{ degree_form.start_time|add_class:"mdl-textfield__input" }}
+      <label for="id_start_time" class="mdl-textfield__label">
+        Start Date
+      </label>
+      <span class="mdl-textfield__error">{{ degree_form.start_time.errors }}</span>
+    </div>
+    <!--TODO: Replace with Select vesion when MDL has it -->
+    <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+      {{ degree_form.end_time|add_class:"mdl-textfield__input" }}
+      <label for="id_end_time" class="mdl-textfield__label">
+        End Date
+      </label>
+      <span class="mdl-textfield__error">{{ degree_form.end_time.errors }}</span>
+    </div>
+    <br>
+    <input class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent mdl-js-ripple-effect" type="submit" value="save" />
+    <br>
   </form>
 </div>
 {% endblock %}
