--- a/core/templates/core/profile.html
+++ b/core/templates/core/profile.html
@@ -4,39 +4,56 @@
 
 {% block inner_content %}
 
-<h3>{{ profile.get_full_name }}</h3>
+<!-- Name and contact info-->
+<div>
+  <div class="profile-name">
+    <h3>{{ profile.get_full_name }}</h3>
+  </div>
+  {% thumbnail profile.pic "200x200" crop="center" as im %}
+    <img style="float: right;" src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}">
+  {% endthumbnail %}
+  <h4>Personal Information</h4>
+  <div class="profile-contact-card">
+    <p><span class="profile-contact-field">Class:</span> {{ profile.class_year }}</p>
+    <p><span class="profile-contact-field">Phone number:</span> {{ profile.phone_number }}</p>
+    <p><span class="profile-contact-field">Email:</span> {{ profile.email }}</p>
+    <p>Birthday: {{ profile.birthday }}</p>
+    <p>Hometown: {{ profile.hometown }}</p>
+    <p>High School: {{ profile.high_school }}</p>
+  </div>
+</div>
+
+<h4>Education</h4>
+{% for degree in profile.degrees.all %}
+  <div class="experience">
+    <p class="school-name">School: {{ degree.school }}</p>
+    <p>Type: {{ degree.degree_type }}</p>
+    <p>Time period: {{ start_time }} - {{ end_time }}</p>
+    {% for major in degree.majors.all %}
+      {% if major.utd_major %}
+        <p>Major: {{ major.utd_major }}</p>
+      {% elif major.other_major %}
+        <p>Major: {{ major.other_major }}</p>
+      {% endif %}
+    {% endfor %}
+    {% for minor in degree.minors.all %}
+      {% if minor.utd_minor %}
+        <p>Minor: {{ minor.utd_minor }}</p>
+      {% elif minor.other_minor %}
+        <p>Minor: {{ minor.other_minor }}</p>
+      {% endif %}
+    {% endfor %}
+  </div>
+{% endfor %}
+
+<h4>Experience</h4>
+
+<h4>Study Abroad</h4>
 
 {% if edit %}
-  <a href="{% url 'edit_info' %}">Edit Profile</a>
+  <a href="{% url 'edit_info' %}" class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent mdl-js-ripple-effect">
+      Edit Profile</a>
   <br>
 {% endif %}
-
-{% thumbnail profile.pic "200x200" crop="center" as im %}
-  <img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}">
-{% endthumbnail %}
-
-<p>Class: {{ profile.class_year }}</p>
-{% for degree in profile.degrees.all %}
-  <p>School: {{ degree.school }}</p>
-  <p>Type: {{ degree.degree_type }}</p>
-  <p>Time period: {{ start_time }} - {{ end_time }}</p>
-  {% for major in degree.majors.all %}
-    {% if major.utd_major %}
-      <p>Major: {{ major.utd_major }}</p>
-    {% elif major.other_major %}
-      <p>Major: {{ major.other_major }}</p>
-    {% endif %}
-  {% endfor %}
-  {% for minor in degree.minors.all %}
-    {% if minor.utd_minor %}
-      <p>Minor: {{ minor.utd_minor }}</p>
-    {% elif minor.other_minor %}
-      <p>Minor: {{ minor.other_minor }}</p>
-    {% endif %}
-  {% endfor %}
-{% endfor %}
-<p>Hometown: {{ profile.hometown }}</p>
-<p>High School: {{ profile.high_school }}</p>
-<p>Phone number: {{ profile.phone_number }}</p>
 
 {% endblock %}
